--- a/_modules/TermTk/TTkWidgets/button.html
+++ b/_modules/TermTk/TTkWidgets/button.html
@@ -226,6 +226,15 @@
 <span class="sd">    :param TTkColor borderColor: the color of the border of the button, defaults to :class:`~TermTk.TTkGui.theme.TTkTheme.buttonBorderColor`</span>
 <span class="sd">    :type borderColor: :class:`~TermTk.TTkCore.color.TTkColor`, optional</span>
 
+<span class="sd">    +-----------------------------------------------------------------------------------------------+</span>
+<span class="sd">    | `Signals &lt;https://ceccopierangiolieugenio.github.io/pyTermTk/tutorial/003-signalslots.html&gt;`_ |</span>
+<span class="sd">    +-----------------------------------------------------------------------------------------------+</span>
+
+<span class="sd">        .. py:method:: clicked()</span>
+<span class="sd">            :signal:</span>
+
+<span class="sd">            This signal is emitted when the button is activated</span>
+
 <span class="sd">    &#39;&#39;&#39;</span>
 
     <span class="vm">__slots__</span> <span class="o">=</span> <span class="p">(</span>
