--- a/_modules/TermTk/TTkWidgets/checkbox.html
+++ b/_modules/TermTk/TTkWidgets/checkbox.html
@@ -212,7 +212,7 @@
 
 <span class="sd">        [ ]CheckBox</span>
 
-<span class="sd">    Demo: `formwidgets.py &lt;https://github.com/ceccopierangiolieugenio/pyTermTk/blob/main/demo/showcase/formwidgets.py&gt;`_</span>
+<span class="sd">    :Demo: `formwidgets.py &lt;https://github.com/ceccopierangiolieugenio/pyTermTk/blob/main/demo/showcase/formwidgets.py&gt;`_</span>
 
 <span class="sd">    :param str text: the text shown on the checkbox, defaults to &quot;&quot;</span>
 <span class="sd">    :type text: str, optional</span>
@@ -243,7 +243,7 @@
     <span class="vm">__slots__</span> <span class="o">=</span> <span class="p">(</span>
         <span class="s1">&#39;_checked&#39;</span><span class="p">,</span> <span class="s1">&#39;_text&#39;</span><span class="p">,</span>
         <span class="c1"># Signals</span>
-         <span class="s1">&#39;clicked&#39;</span><span class="p">,</span> <span class="s1">&#39;stateChanged&#39;</span>
+        <span class="s1">&#39;clicked&#39;</span><span class="p">,</span> <span class="s1">&#39;stateChanged&#39;</span>
         <span class="p">)</span>
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="o">*</span><span class="n">args</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
         <span class="n">TTkWidget</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="o">*</span><span class="n">args</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span>
