--- a/_modules/index.html
+++ b/_modules/index.html
@@ -170,6 +170,7 @@
   <h1>All modules for which code is available</h1>
 <ul><li><a href="TermTk/TTkAbstract/abstractscrollarea.html">TermTk.TTkAbstract.abstractscrollarea</a></li>
 <li><a href="TermTk/TTkAbstract/abstractscrollview.html">TermTk.TTkAbstract.abstractscrollview</a></li>
+<li><a href="TermTk/TTkCore/TTkTerm/inputkey.html">TermTk.TTkCore.TTkTerm.inputkey</a></li>
 <li><a href="TermTk/TTkCore/canvas.html">TermTk.TTkCore.canvas</a></li>
 <li><a href="TermTk/TTkCore/color.html">TermTk.TTkCore.color</a></li>
 <li><a href="TermTk/TTkCore/constant.html">TermTk.TTkCore.constant</a></li>
