--- a/genindex.html
+++ b/genindex.html
@@ -218,6 +218,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autogen.TermTk/TermTk.TTkCore.string.html#TermTk.TTkCore.string.TTkString.align">align() (TTkString method)</a>
 </li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.KeyModifier.AltModifier">AltModifier (TTkConstant.KeyModifier attribute)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -262,6 +264,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.Alignment.CENTER_ALIGN">CENTER_ALIGN (TTkConstant.Alignment attribute)</a>
 </li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.KeyType.Character">Character (TTkConstant.KeyType attribute)</a>
+</li>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.checkboxBorderColor">checkboxBorderColor (TTkTheme attribute)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.checkboxBorderColorFocus">checkboxBorderColorFocus (TTkTheme attribute)</a>
@@ -272,19 +276,29 @@
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.checkboxTextColor">checkboxTextColor (TTkTheme attribute)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.checkboxTextColorFocus">checkboxTextColorFocus (TTkTheme attribute)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.checkbox.html#TermTk.TTkWidgets.checkbox.TTkCheckbox.checkState">checkState() (TTkCheckbox method)</a>
 </li>
-      <li><a href="autogen.TermTk/TermTk.TTkWidgets.checkbox.html#TermTk.TTkWidgets.checkbox.TTkCheckbox.clicked">clicked() (TTkCheckbox method)</a>
+      <li><a href="autogen.TermTk/TermTk.TTkWidgets.button.html#TermTk.TTkWidgets.button.TTkButton.clicked">clicked() (TTkButton method)</a>
+
+      <ul>
+        <li><a href="autogen.TermTk/TermTk.TTkWidgets.checkbox.html#TermTk.TTkWidgets.checkbox.TTkCheckbox.clicked">(TTkCheckbox method)</a>
+</li>
+        <li><a href="autogen.TermTk/TermTk.TTkWidgets.radiobutton.html#TermTk.TTkWidgets.radiobutton.TTkRadioButton.clicked">(TTkRadioButton method)</a>
+</li>
+      </ul></li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.TTkTerm.inputkey.html#TermTk.TTkCore.TTkTerm.inputkey.KeyEvent.code">code (KeyEvent attribute)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.comboboxBorderColor">comboboxBorderColor (TTkTheme attribute)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.comboboxContentColor">comboboxContentColor (TTkTheme attribute)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.comboboxContentColorFocus">comboboxContentColorFocus (TTkTheme attribute)</a>
+</li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.KeyModifier.ControlModifier">ControlModifier (TTkConstant.KeyModifier attribute)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -340,6 +354,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autogen.TermTk/TermTk.TTkGui.draw_utf8.html#TermTk.TTkGui.draw_utf8.TTkTheme.grid">grid (TTkTheme attribute)</a>
 </li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.KeyModifier.GroupSwitchModifier">GroupSwitchModifier (TTkConstant.KeyModifier attribute)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -366,6 +382,10 @@
 <h2 id="K">K</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.TTkTerm.inputkey.html#TermTk.TTkCore.TTkTerm.inputkey.KeyEvent.key">key (KeyEvent attribute)</a>
+</li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.TTkTerm.inputkey.html#TermTk.TTkCore.TTkTerm.inputkey.KeyEvent">KeyEvent (class in TermTk.TTkCore.TTkTerm.inputkey)</a>
+</li>
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.listwidget.html#TermTk.TTkWidgets.listwidget.TTkAbstractListItem.keyEvent">keyEvent() (TTkAbstractListItem method)</a>
 
       <ul>
@@ -384,6 +404,10 @@
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.spinbox.html#TermTk.TTkWidgets.spinbox.TTkSpinBox.keyEvent">(TTkSpinBox method)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.KeyModifier.KeypadModifier">KeypadModifier (TTkConstant.KeyModifier attribute)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -432,9 +456,13 @@
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.menuButtonShortcutColor">menuButtonShortcutColor (TTkTheme attribute)</a>
 </li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.KeyModifier.MetaModifier">MetaModifier (TTkConstant.KeyModifier attribute)</a>
+</li>
       <li><a href="autogen.TermTk/TermTk.TTkLayouts.gridlayout.html#TermTk.TTkLayouts.gridlayout.TTkGridLayout.minimumHeight">minimumHeight() (TTkGridLayout method)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkLayouts.gridlayout.html#TermTk.TTkLayouts.gridlayout.TTkGridLayout.minimumWidth">minimumWidth() (TTkGridLayout method)</a>
+</li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.TTkTerm.inputkey.html#TermTk.TTkCore.TTkTerm.inputkey.KeyEvent.mod">mod (KeyEvent attribute)</a>
 </li>
       <li>
     module
@@ -459,6 +487,8 @@
         <li><a href="autogen.TermTk/TermTk.TTkCore.color.html#module-TermTk.TTkCore.color">TermTk.TTkCore.color</a>
 </li>
         <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#module-TermTk.TTkCore.constant">TermTk.TTkCore.constant</a>
+</li>
+        <li><a href="autogen.TermTk/TermTk.TTkCore.drag.html#module-TermTk.TTkCore.drag">TermTk.TTkCore.drag</a>
 </li>
         <li><a href="autogen.TermTk/TermTk.TTkCore.draw.html#module-TermTk.TTkCore.draw">TermTk.TTkCore.draw</a>
 </li>
@@ -697,6 +727,10 @@
 <h2 id="N">N</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.KeyModifier.NoModifier">NoModifier (TTkConstant.KeyModifier attribute)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.Alignment.NONE">NONE (TTkConstant.Alignment attribute)</a>
 </li>
   </ul></td>
@@ -833,11 +867,15 @@
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.widget.html#TermTk.TTkWidgets.widget.TTkWidget.setPadding">setPadding() (TTkWidget method)</a>
 </li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.KeyModifier.ShiftModifier">ShiftModifier (TTkConstant.KeyModifier attribute)</a>
+</li>
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.TTkModelView.treewidget.html#TermTk.TTkWidgets.TTkModelView.treewidget.TTkTreeWidget.sortColumn">sortColumn() (TTkTreeWidget method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.TTkModelView.treewidget.html#TermTk.TTkWidgets.TTkModelView.treewidget.TTkTreeWidget.sortItems">sortItems() (TTkTreeWidget method)</a>
+</li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.KeyType.SpecialKey">SpecialKey (TTkConstant.KeyType attribute)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.string.html#TermTk.TTkCore.string.TTkString.split">split() (TTkString method)</a>
 </li>
@@ -941,6 +979,13 @@
 
       <ul>
         <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#module-TermTk.TTkCore.constant">module</a>
+</li>
+      </ul></li>
+      <li>
+    TermTk.TTkCore.drag
+
+      <ul>
+        <li><a href="autogen.TermTk/TermTk.TTkCore.drag.html#module-TermTk.TTkCore.drag">module</a>
 </li>
       </ul></li>
       <li>
@@ -1538,6 +1583,10 @@
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.CheckState">TTkConstant.CheckState (class in TermTk.TTkCore.constant)</a>
 </li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.KeyModifier">TTkConstant.KeyModifier (class in TermTk.TTkCore.constant)</a>
+</li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.KeyType">TTkConstant.KeyType (class in TermTk.TTkCore.constant)</a>
+</li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.LayoutItemTypes">TTkConstant.LayoutItemTypes (class in TermTk.TTkCore.constant)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.Fancy.table.html#TermTk.TTkWidgets.Fancy.table.TTkFancyTable">TTkFancyTable (class in TermTk.TTkWidgets.Fancy.table)</a>
@@ -1629,6 +1678,8 @@
       <li><a href="autogen.TermTk/TermTk.TTkLayouts.layout.html#TermTk.TTkLayouts.layout.TTkWidgetItem">TTkWidgetItem (class in TermTk.TTkLayouts.layout)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.window.html#TermTk.TTkWidgets.window.TTkWindow">TTkWindow (class in TermTk.TTkWidgets.window)</a>
+</li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.TTkTerm.inputkey.html#TermTk.TTkCore.TTkTerm.inputkey.KeyEvent.type">type (KeyEvent attribute)</a>
 </li>
   </ul></td>
 </tr></table>
