--- a/_modules/TermTk/TTkWidgets/radiobutton.html
+++ b/_modules/TermTk/TTkWidgets/radiobutton.html
@@ -201,8 +201,41 @@
 <span class="kn">from</span> <span class="nn">TermTk.TTkWidgets.widget</span> <span class="kn">import</span> <span class="o">*</span>
 
 <div class="viewcode-block" id="TTkRadioButton"><a class="viewcode-back" href="../../../autogen.TermTk/TermTk.TTkWidgets.radiobutton.html#TermTk.TTkWidgets.radiobutton.TTkRadioButton">[docs]</a><span class="k">class</span> <span class="nc">TTkRadioButton</span><span class="p">(</span><span class="n">TTkWidget</span><span class="p">):</span>
+    <span class="sd">&#39;&#39;&#39;</span>
+<span class="sd">    **Checked**</span>
+<span class="sd">    ::</span>
+
+<span class="sd">        (X)radioButton</span>
+
+<span class="sd">    **Unchecked**</span>
+<span class="sd">    ::</span>
+
+<span class="sd">        ( )RadioButton</span>
+
+<span class="sd">    Demo: `formwidgets.py &lt;https://github.com/ceccopierangiolieugenio/pyTermTk/blob/main/demo/showcase/formwidgets.py&gt;`_</span>
+
+<span class="sd">    :param str text: the text shown on the checkbox, defaults to &quot;&quot;</span>
+<span class="sd">    :type text: str, optional</span>
+<span class="sd">    :param bool checked: Checked status, defaults to &quot;False&quot;</span>
+<span class="sd">    :type checked: bool, optional</span>
+
+<span class="sd">    +-----------------------------------------------------------------------------------------------+</span>
+<span class="sd">    | `Signals &lt;https://ceccopierangiolieugenio.github.io/pyTermTk/tutorial/003-signalslots.html&gt;`_ |</span>
+<span class="sd">    +-----------------------------------------------------------------------------------------------+</span>
+
+<span class="sd">        .. py:method:: clicked()</span>
+<span class="sd">            :signal:</span>
+
+<span class="sd">            This signal is emitted when the button is activated</span>
+
+<span class="sd">     &#39;&#39;&#39;</span>
+
     <span class="n">_radioLists</span> <span class="o">=</span> <span class="p">{}</span>
-    <span class="vm">__slots__</span> <span class="o">=</span> <span class="p">(</span><span class="s1">&#39;_checked&#39;</span><span class="p">,</span> <span class="s1">&#39;_text&#39;</span><span class="p">,</span> <span class="s1">&#39;clicked&#39;</span><span class="p">)</span>
+    <span class="vm">__slots__</span> <span class="o">=</span> <span class="p">(</span>
+        <span class="s1">&#39;_checked&#39;</span><span class="p">,</span> <span class="s1">&#39;_text&#39;</span><span class="p">,</span>
+        <span class="c1"># Signals</span>
+        <span class="s1">&#39;clicked&#39;</span>
+        <span class="p">)</span>
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="o">*</span><span class="n">args</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
         <span class="c1"># Define Signals</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">clicked</span> <span class="o">=</span> <span class="n">pyTTkSignal</span><span class="p">()</span>
