--- a/autogen.TermTk/TermTk.TTkWidgets.scrollbar.html
+++ b/autogen.TermTk/TermTk.TTkWidgets.scrollbar.html
@@ -222,10 +222,15 @@
 <p class="admonition-title">Note</p>
 <p>Reimplement this function to handle this event</p>
 </div>
-<dl class="simple">
-<dt>Args:</dt><dd><p>evt ([TermTk.TTkCore.TTkTerm.input.MouseEvent]): the mouse event</p>
+<dl class="field-list simple">
+<dt class="field-odd">Parameters</dt>
+<dd class="field-odd"><p><strong>evt</strong> (<code class="xref py py-class docutils literal notranslate"><span class="pre">TTkMouseEvent</span></code>) – The mouse event</p>
 </dd>
-<dt>Returns:</dt><dd><p>bool: True if the event has been handled</p>
+<dt class="field-even">Returns</dt>
+<dd class="field-even"><p><strong>True</strong> if the event has been handled</p>
+</dd>
+<dt class="field-odd">Return type</dt>
+<dd class="field-odd"><p>bool</p>
 </dd>
 </dl>
 </dd></dl>
@@ -238,10 +243,15 @@
 <p class="admonition-title">Note</p>
 <p>Reimplement this function to handle this event</p>
 </div>
-<dl class="simple">
-<dt>Args:</dt><dd><p>evt ([TermTk.TTkCore.TTkTerm.input.MouseEvent]): the mouse event</p>
+<dl class="field-list simple">
+<dt class="field-odd">Parameters</dt>
+<dd class="field-odd"><p><strong>evt</strong> (<code class="xref py py-class docutils literal notranslate"><span class="pre">TTkMouseEvent</span></code>) – The mouse event</p>
 </dd>
-<dt>Returns:</dt><dd><p>bool: True if the event has been handled</p>
+<dt class="field-even">Returns</dt>
+<dd class="field-even"><p><strong>True</strong> if the event has been handled</p>
+</dd>
+<dt class="field-odd">Return type</dt>
+<dd class="field-odd"><p>bool</p>
 </dd>
 </dl>
 </dd></dl>
@@ -261,10 +271,15 @@ ths need to be overridden in the widget.</p>
 <p class="admonition-title">Note</p>
 <p>Reimplement this function to handle this event</p>
 </div>
-<dl class="simple">
-<dt>Args:</dt><dd><p>evt ([TermTk.TTkCore.TTkTerm.input.MouseEvent]): the mouse event</p>
+<dl class="field-list simple">
+<dt class="field-odd">Parameters</dt>
+<dd class="field-odd"><p><strong>evt</strong> (<code class="xref py py-class docutils literal notranslate"><span class="pre">TTkMouseEvent</span></code>) – The mouse event</p>
 </dd>
-<dt>Returns:</dt><dd><p>bool: True if the event has been handled</p>
+<dt class="field-even">Returns</dt>
+<dd class="field-even"><p><strong>True</strong> if the event has been handled</p>
+</dd>
+<dt class="field-odd">Return type</dt>
+<dd class="field-odd"><p>bool</p>
 </dd>
 </dl>
 </dd></dl>
