--- a/genindex.html
+++ b/genindex.html
@@ -290,7 +290,7 @@
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.radiobutton.html#TermTk.TTkWidgets.radiobutton.TTkRadioButton.clicked">(TTkRadioButton method)</a>
 </li>
       </ul></li>
-      <li><a href="autogen.TermTk/TermTk.TTkCore.TTkTerm.inputkey.html#TermTk.TTkCore.TTkTerm.inputkey.KeyEvent.code">code (KeyEvent attribute)</a>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.TTkTerm.inputkey.html#TermTk.TTkCore.TTkTerm.inputkey.TTkKeyEvent.code">code (TTkKeyEvent attribute)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.comboboxBorderColor">comboboxBorderColor (TTkTheme attribute)</a>
 </li>
@@ -382,9 +382,7 @@
 <h2 id="K">K</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="autogen.TermTk/TermTk.TTkCore.TTkTerm.inputkey.html#TermTk.TTkCore.TTkTerm.inputkey.KeyEvent.key">key (KeyEvent attribute)</a>
-</li>
-      <li><a href="autogen.TermTk/TermTk.TTkCore.TTkTerm.inputkey.html#TermTk.TTkCore.TTkTerm.inputkey.KeyEvent">KeyEvent (class in TermTk.TTkCore.TTkTerm.inputkey)</a>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.TTkTerm.inputkey.html#TermTk.TTkCore.TTkTerm.inputkey.TTkKeyEvent.key">key (TTkKeyEvent attribute)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.listwidget.html#TermTk.TTkWidgets.listwidget.TTkAbstractListItem.keyEvent">keyEvent() (TTkAbstractListItem method)</a>
 
@@ -462,7 +460,7 @@
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkLayouts.gridlayout.html#TermTk.TTkLayouts.gridlayout.TTkGridLayout.minimumWidth">minimumWidth() (TTkGridLayout method)</a>
 </li>
-      <li><a href="autogen.TermTk/TermTk.TTkCore.TTkTerm.inputkey.html#TermTk.TTkCore.TTkTerm.inputkey.KeyEvent.mod">mod (KeyEvent attribute)</a>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.TTkTerm.inputkey.html#TermTk.TTkCore.TTkTerm.inputkey.TTkKeyEvent.mod">mod (TTkKeyEvent attribute)</a>
 </li>
       <li>
     module
@@ -513,6 +511,8 @@
         <li><a href="autogen.TermTk/TermTk.TTkCore.TTkTerm.input.html#module-TermTk.TTkCore.TTkTerm.input">TermTk.TTkCore.TTkTerm.input</a>
 </li>
         <li><a href="autogen.TermTk/TermTk.TTkCore.TTkTerm.inputkey.html#module-TermTk.TTkCore.TTkTerm.inputkey">TermTk.TTkCore.TTkTerm.inputkey</a>
+</li>
+        <li><a href="autogen.TermTk/TermTk.TTkCore.TTkTerm.inputmouse.html#module-TermTk.TTkCore.TTkTerm.inputmouse">TermTk.TTkCore.TTkTerm.inputmouse</a>
 </li>
         <li><a href="autogen.TermTk/TermTk.TTkCore.TTkTerm.readinputlinux.html#module-TermTk.TTkCore.TTkTerm.readinputlinux">TermTk.TTkCore.TTkTerm.readinputlinux</a>
 </li>
@@ -1073,6 +1073,13 @@
 </li>
       </ul></li>
       <li>
+    TermTk.TTkCore.TTkTerm.inputmouse
+
+      <ul>
+        <li><a href="autogen.TermTk/TermTk.TTkCore.TTkTerm.inputmouse.html#module-TermTk.TTkCore.TTkTerm.inputmouse">module</a>
+</li>
+      </ul></li>
+      <li>
     TermTk.TTkCore.TTkTerm.readinputlinux
 
       <ul>
@@ -1617,6 +1624,8 @@
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkK">TTkK (class in TermTk.TTkCore.constant)</a>
 </li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.TTkTerm.inputkey.html#TermTk.TTkCore.TTkTerm.inputkey.TTkKeyEvent">TTkKeyEvent (class in TermTk.TTkCore.TTkTerm.inputkey)</a>
+</li>
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.label.html#TermTk.TTkWidgets.label.TTkLabel">TTkLabel (class in TermTk.TTkWidgets.label)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkLayouts.layout.html#TermTk.TTkLayouts.layout.TTkLayout">TTkLayout (class in TermTk.TTkLayouts.layout)</a>
@@ -1634,6 +1643,8 @@
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.menubar.html#TermTk.TTkWidgets.menubar.TTkMenuButton">TTkMenuButton (class in TermTk.TTkWidgets.menubar)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.menubar.html#TermTk.TTkWidgets.menubar.TTkMenuLayout">TTkMenuLayout (class in TermTk.TTkWidgets.menubar)</a>
+</li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.TTkTerm.inputmouse.html#TermTk.TTkCore.TTkTerm.inputmouse.TTkMouseEvent">TTkMouseEvent (class in TermTk.TTkCore.TTkTerm.inputmouse)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.radiobutton.html#TermTk.TTkWidgets.radiobutton.TTkRadioButton">TTkRadioButton (class in TermTk.TTkWidgets.radiobutton)</a>
 </li>
@@ -1679,7 +1690,7 @@
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.window.html#TermTk.TTkWidgets.window.TTkWindow">TTkWindow (class in TermTk.TTkWidgets.window)</a>
 </li>
-      <li><a href="autogen.TermTk/TermTk.TTkCore.TTkTerm.inputkey.html#TermTk.TTkCore.TTkTerm.inputkey.KeyEvent.type">type (KeyEvent attribute)</a>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.TTkTerm.inputkey.html#TermTk.TTkCore.TTkTerm.inputkey.TTkKeyEvent.type">type (TTkKeyEvent attribute)</a>
 </li>
   </ul></td>
 </tr></table>
