--- a/_modules/TermTk/TTkCore/TTkTerm/inputkey.html
+++ b/_modules/TermTk/TTkCore/TTkTerm/inputkey.html
@@ -196,10 +196,10 @@
 
 <span class="kn">from</span> <span class="nn">TermTk.TTkCore.constant</span> <span class="kn">import</span> <span class="n">TTkK</span>
 
-<div class="viewcode-block" id="KeyEvent"><a class="viewcode-back" href="../../../../autogen.TermTk/TermTk.TTkCore.TTkTerm.inputkey.html#TermTk.TTkCore.TTkTerm.inputkey.KeyEvent">[docs]</a><span class="k">class</span> <span class="nc">KeyEvent</span><span class="p">:</span>
+<div class="viewcode-block" id="TTkKeyEvent"><a class="viewcode-back" href="../../../../autogen.TermTk/TermTk.TTkCore.TTkTerm.inputkey.html#TermTk.TTkCore.TTkTerm.inputkey.TTkKeyEvent">[docs]</a><span class="k">class</span> <span class="nc">TTkKeyEvent</span><span class="p">:</span>
     <span class="sd">&#39;&#39;&#39; Keyboard Events</span>
 
-<span class="sd">    :demo: `test.input.py &lt;https://github.com/ceccopierangiolieugenio/pyTermTk/blob/main/tests/test.input.py&gt;`_</span>
+<span class="sd">    :Demo: `test.input.py &lt;https://github.com/ceccopierangiolieugenio/pyTermTk/blob/main/tests/test.input.py&gt;`_</span>
 
 <span class="sd">    :param type: The key input type recorded</span>
 <span class="sd">    :type type: :class:`~TermTk.TTkCore.constant.TTkConstant.KeyType`</span>
@@ -244,11 +244,11 @@
     <span class="nd">@staticmethod</span>
     <span class="k">def</span> <span class="nf">parse</span><span class="p">(</span><span class="n">input_key</span><span class="p">):</span>  <span class="c1"># from: Space           except &quot;DEL&quot;</span>
         <span class="k">if</span> <span class="nb">len</span><span class="p">(</span><span class="n">input_key</span><span class="p">)</span> <span class="o">==</span> <span class="mi">1</span> <span class="ow">and</span> <span class="s2">&quot;</span><span class="se">\040</span><span class="s2">&quot;</span> <span class="o">&lt;=</span> <span class="n">input_key</span> <span class="o">!=</span> <span class="s2">&quot;</span><span class="se">\177</span><span class="s2">&quot;</span><span class="p">:</span>
-            <span class="k">return</span> <span class="n">KeyEvent</span><span class="p">(</span><span class="n">TTkK</span><span class="o">.</span><span class="n">Character</span><span class="p">,</span> <span class="n">input_key</span><span class="p">,</span> <span class="n">input_key</span><span class="p">,</span> <span class="n">TTkK</span><span class="o">.</span><span class="n">NoModifier</span><span class="p">)</span>
+            <span class="k">return</span> <span class="n">TTkKeyEvent</span><span class="p">(</span><span class="n">TTkK</span><span class="o">.</span><span class="n">Character</span><span class="p">,</span> <span class="n">input_key</span><span class="p">,</span> <span class="n">input_key</span><span class="p">,</span> <span class="n">TTkK</span><span class="o">.</span><span class="n">NoModifier</span><span class="p">)</span>
         <span class="k">else</span><span class="p">:</span>
             <span class="n">key</span><span class="p">,</span> <span class="n">mod</span> <span class="o">=</span> <span class="n">_translate_key</span><span class="p">(</span><span class="n">input_key</span><span class="p">)</span>
             <span class="k">if</span> <span class="n">key</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span><span class="p">:</span>
-                <span class="k">return</span> <span class="n">KeyEvent</span><span class="p">(</span><span class="n">TTkK</span><span class="o">.</span><span class="n">SpecialKey</span><span class="p">,</span> <span class="n">key</span><span class="p">,</span> <span class="n">input_key</span><span class="p">,</span> <span class="n">mod</span><span class="p">)</span>
+                <span class="k">return</span> <span class="n">TTkKeyEvent</span><span class="p">(</span><span class="n">TTkK</span><span class="o">.</span><span class="n">SpecialKey</span><span class="p">,</span> <span class="n">key</span><span class="p">,</span> <span class="n">input_key</span><span class="p">,</span> <span class="n">mod</span><span class="p">)</span>
         <span class="k">return</span> <span class="kc">None</span></div>
 
 <span class="k">def</span> <span class="nf">_translate_key</span><span class="p">(</span><span class="n">key</span><span class="p">):</span>
