--- a/_modules/index.html
+++ b/_modules/index.html
@@ -171,6 +171,7 @@
 <ul><li><a href="TermTk/TTkAbstract/abstractscrollarea.html">TermTk.TTkAbstract.abstractscrollarea</a></li>
 <li><a href="TermTk/TTkAbstract/abstractscrollview.html">TermTk.TTkAbstract.abstractscrollview</a></li>
 <li><a href="TermTk/TTkCore/TTkTerm/inputkey.html">TermTk.TTkCore.TTkTerm.inputkey</a></li>
+<li><a href="TermTk/TTkCore/TTkTerm/inputmouse.html">TermTk.TTkCore.TTkTerm.inputmouse</a></li>
 <li><a href="TermTk/TTkCore/canvas.html">TermTk.TTkCore.canvas</a></li>
 <li><a href="TermTk/TTkCore/color.html">TermTk.TTkCore.color</a></li>
 <li><a href="TermTk/TTkCore/constant.html">TermTk.TTkCore.constant</a></li>
